Build out the type visitor